--- a/site/Index.html
+++ b/site/Index.html
@@ -4,6 +4,6 @@
 	<title>Hello Courseera!</title>
 </head>
 <body>
-<h1> Hello Courserea!</h1>
+<h1> Hello Courserea! its a great course </h1>
 </body>
 </html>
